fix collapsable height and send button lock

--- a/components/Competition/Competition.module.css
+++ b/components/Competition/Competition.module.css
@@ -13,6 +13,7 @@
 
 .hidden {
   padding: 0px;
+  overflow: hidden;
   transition: height 0.3s ease-in-out;
 }
  
